--- a/Frontend/Homepage/main.css
+++ b/Frontend/Homepage/main.css
@@ -8,6 +8,9 @@ body {
     justify-content: space-between;
     height: 70px;
     border-bottom: 2px solid #e5eaee;
+    margin-left: 250px;
+    margin-right: 250px;
+
 }
 
 .navbar {
@@ -41,6 +44,7 @@ body {
     border-radius: 50px;
     background-color: #fff;
     color: #6c7a89;
+
 }
 
 .nav__search-icon {
