--- a/Frontend/Homepage/main.css
+++ b/Frontend/Homepage/main.css
@@ -1,11 +1,10 @@
 body {
     margin: 0;
-    font-family: "Arial", sans-serif; ;
+    font-family: "Arial", sans-serif;
+    ;
 }
 
-.header {
-
-}
+.header {}
 
 .header__nav__wp {
     border-bottom: 2px solid #e5eaee;
@@ -99,32 +98,45 @@ body {
     margin-right: 10px;
     color: #a5aeb4;
 }
-/* Mua ve theo phim */
-.app__movies{
 
-}
-.app__movies-wp{
+/* Mua ve theo phim */
+.app__movies {}
+
+.app__movies-wp {
     margin-right: 250px;
-    margin-left: 250px ;
+    margin-left: 250px;
     display: flex;
     justify-content: space-between;
 }
-.app__movies-items-img{
+
+.app__movies-items-img {
     width: 100%;
     height: 150px;
     border-radius: 20px 20px 0 0;
 }
-.app__movies-title{
+
+.app__movies-title {
     text-align: center;
     padding: 30px;
 }
-.app__movies-items{
-    border: 1px solid #a5aeb4 ;
+
+.app__movies-items {
+    border: 1px solid #a5aeb4;
     width: 120px;
     height: 200px;
-    border-radius: 20px;
+    border-radius: 10px;
 }
-.app__movies-items-link,
+.app__movies-items-img {
+    display: block;
+    width: 100%;
+    height: 150px;
+    border-radius: 10px 10px 0 0;
+}
 .app__movies-items-btn{
     width: 100%;
+    height: 20px;
+    background-color: #d31602;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
