--- a/Frontend/Homepage/main.css
+++ b/Frontend/Homepage/main.css
@@ -100,6 +100,9 @@ body {
 }
 
 /* Mua ve theo phim */
+.app{
+    margin-bottom: 100px;
+}
 .app__movies {
     border-bottom: 2px solid #a5aeb4;
     padding-bottom: 100px;
@@ -162,35 +165,127 @@ body {
 }
 
 /* Mua ve theo rap */
-.app__cinema-wp{
+.app__cinema-wp {
     margin-left: 250px;
     margin-right: 250px;
     display: flex;
-    justify-content: space-between;
 }
+
 /* Location */
-.app__cinema-location{
+.app__cinema-location {
     background-color: #edf2f8;
-    width: 260px;
+    width: 300px;
+    height: auto;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 1px 1px 5px #a7b1c2;
+    margin-right: 50px;
+
+
 }
-.app__cinema-location-title{
+
+.app__cinema-location-title {
+    font-weight: bold;
     font-size: 20px;
+    margin-left: 20px;
+    color: #a7b1c2;
 }
-.app__cinema-location-list{
+
+.app__cinema-location-list-wp {
+    background-color: white;
+    width: 100%;
+    height: 500px;
+
+}
+
+.app__cinema-location-list {
     padding: 0;
+    margin: 0;
 }
-.app__cinema-location-list-items{
+
+.app__cinema-location-list-items {
     font-size: 15px;
     list-style: none;
-    
+    height: 50px;
+    border-bottom: 1px solid #a7b1c2;
+    padding: 15px;
+    color: #a7b1c2;
+    font-weight: bold;
+}
+
+.app__cinema-location-list-items:hover {
+    background-color: #2c7be4;
+    color: white;
+    font-weight: bold;
+}
+
+/*Cinema  */
+.app__cinema-item {
+    background-color: #edf2f8;
+    width: 300px;
+    height: auto;
+    border-radius: 10px 10px 0 0;
+    box-shadow: 1px 1px 5px #a7b1c2;
+    margin-right: 50px;
 
 }
-/*Cinema  */
 
+.app__cinema-item-title {
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 20px;
+    color: #a7b1c2;
+}
+
+.app__cinema-item-list-wp {
+    width: 100%;
+    height: 500px;
+    background-color: white;
+}
+
+.app__cinema-item-list {
+    padding: 0;
+    margin: 0;
+}
+
+.app__cinema-item-list-items {
+    font-size: 15px;
+    list-style: none;
+    height: 50px;
+    border-bottom: 1px solid #a7b1c2;
+    padding: 15px;
+    color: #a7b1c2;
+    font-weight: bold;
+    background-color: white;
+}
+
+.app__cinema-item-list-items:hover {
+    background-color: #2c7be4;
+    color: white;
+    font-weight: bold;
+}
+/* Calender */
+.app__calender{
+    
+}
 /* Date */
 .app__calender-date {
-    width: 550px;
-    height: 50px;
+    width: 700px;
+    height: 80px;
     background-color: #edf2f8;
-    border-radius:10px;
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+/* Note */
+.app__calender-note{
+    height: 50px;
+    width: 700px;
+    background-color: #f6c343;
+    margin-bottom: 15px;
+    border-radius: 5px;
+}
+/* Footer */
+.footer__wp{
+    width: 100%;
+    height: 300px;
+    background-color: black;
 }
