--- a/Frontend/Homepage/main.css
+++ b/Frontend/Homepage/main.css
@@ -178,7 +178,7 @@ body {
 .app__cinema-location-list-wp,
 .app__cinema-item-list-wp {
     width: 100%;
-    height: 500px;
+    height: 550px;
     background-color: white;
 }
 
@@ -299,18 +299,22 @@ body {
 /* Calendar Item */
 .app__calender-item {
     width: 600px;
-    height: 300px;
+    height: auto;
     margin-top: 10px;
-    box-shadow: 1px 1px 5px #a7b1c2;
-    display: flex;
 }
-
+.app__calender-item-wp{
+    display: flex;
+    box-shadow: 1px 1px 5px #a7b1c2;
+    padding-bottom: 30px;
+}
 .app__calender-items-wp {
-    padding-left: 20px;
+    padding-left: 50px;
+    
 }
 
 .app__calender-item-img-wp {
-    padding: 50px 0 0 50px;
+    padding-left: 20px;
+    padding-top: 20px;
 }
 
 .app__calender-item-img {
@@ -320,24 +324,28 @@ body {
 }
 
 .app__calender-items-title {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
-    padding: 50px 0 0 5px;
-}
+    padding-top: 20px;
 
+}
+.app__calender-items-dec{
+    padding-top: 10px;
+    color: #c1cad5;
+}
 .app__calender-items-time-wp {
     display: flex;
     flex-wrap: wrap;
-    padding: 50px 50px 0 5px;
+    padding-top: 20px;
 }
 
 .app__calender-items-time {
-    width: 80px;
-    height: 40px;
+    width: 50px;
+    height: 30px;
     background-color: #edf2f8;
-    border-radius: 10px;
-    font-size: 15px;
-    margin: 0 30px 20px 0;
+    
+    font-size: 12px;
+    margin-right: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
