--- a/Frontend/Homepage/main.css
+++ b/Frontend/Homepage/main.css
@@ -200,6 +200,7 @@ body {
     background-color: white;
 }
 
+
 .app__cinema-location-list-items:hover,
 .app__cinema-item-list-items:hover {
     background-color: #2c7be4;
@@ -368,4 +369,18 @@ body {
     width: 100%;
     height: 300px;
     background-color: black;
+}
+/* Hành Động */
+.app__cinema-item,
+.app__calender {
+    display: none;
+}
+.app__cinema-location-list-items.active {
+    background-color: #2c7be4;
+    color: white;
+}
+/* Rạp được chọn */
+.app__cinema-item-list-items.active {
+    background-color: #2c7be4;
+    color: white;
 }
