--- a/Frontend/News1/new1.css
+++ b/Frontend/News1/new1.css
@@ -2,7 +2,6 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f8fafc;
   margin: 0;
-  
 }
 
 .container {
@@ -79,8 +78,8 @@ body {
   color: #0ea5e9;
   font-weight: bold;
 }
-<<<<<<< HEAD
-=======
+
+/* Các phần style thêm */
 .right {
     width: 30%;
     float: right;
@@ -221,4 +220,3 @@ body {
 .dropdown:hover .dropdown-content {
     display: block;
 }
->>>>>>> 5d86378a8007d3504e3701c5a0c9fffd6f9bc5e3
